<resources>
    <string name="app_name">誉都商城</string>

<!--  微信 支付宝配置 -->
    <string name="share_platform_weixinid">wx5a3a992ae23c31de</string>
    <string name="share_platform_weixinkey">e6f49ffaf8e83a638fcf07091338a95a</string>
    <string name="share_platform_alipayid">2021001188608324</string>
    <string name="share_platform_alipaykey"></string>
    <string name="normaltitle">誉都商城</string>
    <string name="reget">s后重取</string>
    <string name="getvalidatenum">获取验证码</string>
    <string name="use_terms">用户使用条款.docx</string>
    <string name="app_policy">隐私政策.docx</string>
    <string name="youzan_storeurl" des="注意地址里面的&amp;  是转义了的and符号">https://shop44665437.m.youzan.com/v2/showcase/homepage?alias=8R1fC2WbXq&amp;sl=undefined&amp;st=1&amp;sf=wx_sm&amp;is_share=1&amp;from_uuid=343df3bc-99d2-584c-3630-6ed59ec04f7f&amp;from=singlemessage&amp;redirect_count=1</string>
    <string name="youzan_clientId">3251437bd708a72081</string>
    <string name="youzan_appKey"></string>
    <string name="home_web">首页</string>
    <string name="home_join">加盟</string>
    <string name="home_title">家装一站式</string>
    <string name="home_topic">头条</string>
    <string name="home_shopcar">购物车</string>
    <string name="home_mine">我的</string>

    <string name="price_format">￥%1$s ￥%2$s</string>
    <string name="agree_str">点击登录即同意誉都商城用户协议</string>
    <string name="app_nologin_nick">HI~ 欢迎来到誉都商城</string>
    <string name="join_contract_bottom">联系人：%1$s\n联系电话：%2$s\n公司地址：%3$s</string>
    <string name="about_rudu_contract">联系电话：%1$s\n联系邮箱：%2$s\n公司地址：%3$s</string>
    <string name="newsurl">https://www.rudu668.com/rudu_admin/information/%1$s</string>

    <string name="shopcar" des="购物车">https://shop44665437.youzan.com/wsctrade/cart?kdt_id=44473269</string>
    <string name="waitpay" des="待付款">https://shop44665437.youzan.com/wsctrade/order/list?kdt_id=44473269&amp;type=topay</string>
    <string name="allorder"       des="全部">https://shop44665437.youzan.com/wsctrade/order/list?kdt_id=44473269&amp;type=all</string>
    <string name="tosend"  des="待发货">https://shop44665437.youzan.com/wsctrade/order/list?kdt_id=44473269&amp;type=tosend</string>
    <string name="waitcomment"  des="待评价">https://shop44665437.youzan.com/wsctrade/order/evaluate/center?kdt_id=44473269</string>
    <string name="refund"  des="退换货">https://shop44665437.youzan.com/wsctrade/refund/list</string>
    <string name="contractus" des="联系客服">https://shop44665437.youzan.com/v3/im/index?c=wsc&amp;v=2&amp;kdt_id=44473269</string>
    <string name="quguanguan_redirect" des="去逛逛的地址的跳转">https://shop44665437.youzan.com/v2/showcase/homepage?kdt_id=44473269</string>
    <string name="recommenturl" des="推广中心链接">https://shop44665437.youzan.com/wscump/salesman/center-v2/home?kdt_id=44473269</string>

    <string name="privacyurl">https://www.rudu668.com/rudu_admin/protocol</string>
    <string name="privacytitle">用户协议与隐私政策提示</string>
    <string name="privacy">感谢您的信任和使用。我们将依据《用户协议》及《隐私政策》来帮助您了解我们在收集、使用、存储和共享个人信息的情况以及您享有的相关权利。在您使用App的过程中，我们会收集您的设备信息，操作日志以及浏览记录等信息。在您使用应用的内容上传、分享等服务时，我们需要获取您设备的存储权限、相册权限、位置权限等信息。您可以在相关页面访问、修改、删除你的个人信息或管理您的授权。您可通过阅读完整的《用户协议》和《隐私政策》来了解详细信息。</string>
    <string name="user_note">《用户协议》</string>
    <string name="privacy_info">《隐私政策》</string>
    <string name="personal_info_nickname_hint">请输入你的昵称</string>
    <string name="personal_info_gender">性别</string>
    <string name="personal_info_sex_male">男</string>
    <string name="personal_info_sex_female">女</string>
</resources>