<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/titleBar"
            android:textSize="@dimen/dimen17"
            android:textColor="#222222"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="@dimen/dimen13"
            android:paddingBottom="@dimen/dimen13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen100">

            <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/home"
                app:layout_constraintEnd_toStartOf="@+id/join"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:gravity="center"
                android:drawableTop="@drawable/home_selector"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_web"
                android:textColor="@color/home_table_color"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/join"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/home"
                app:layout_constraintEnd_toStartOf="@+id/topic"
                android:drawableTop="@drawable/join_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_join"
                android:textColor="@color/home_table_color"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/topic"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/join"
                android:drawableTop="@drawable/topic_selector"
                app:layout_constraintEnd_toStartOf="@+id/shopCar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_topic"
                android:textColor="@color/home_table_color"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/shopCar"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/topic"
                app:layout_constraintEnd_toStartOf="@+id/mine"
                android:drawableTop="@drawable/mine_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_shopcar"
                android:textColor="@color/home_table_color"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/mine"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/shopCar"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableTop="@drawable/mine_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_mine"
                android:textColor="@color/home_table_color"
                android:textSize="11sp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:background="#F5F5F5"
            app:layout_constraintTop_toBottomOf="@+id/titleBar"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>